# serializer version: 1
# name: test_clean_torrent_name[anime_absolute_numbered_batch]
  dict({
    'cleaned_name': '[Erai-raws] Bleach 001 ~ 366 [ DSNP ][MultiSub] [BATCH]',
    'original_name': '[Erai-raws] Bleach - 001 ~ 366 [1080p DSNP WEB-DL AVC AAC][MultiSub] [BATCH]',
  })
# ---
# name: test_clean_torrent_name[anime_erai_raws_episode_with_hyphens_in_title]
  dict({
    'cleaned_name': '[Erai-raws] Mushoku Tensei III Isekai Ittara Honki Dasu 04 [ CR ][MultiSub][63594405] mkv',
    'original_name': '[Erai-raws] Mushoku Tensei III - Isekai Ittara Honki Dasu - 04 [1080p CR WEB-DL AVC AAC][MultiSub][63594405].mkv',
  })
# ---
# name: test_clean_torrent_name[anime_erai_raws_ordinal_season_episode]
  dict({
    'cleaned_name': '[Erai-raws] Mairimashita Iruma-kun 4th Season 17 [ CR ][MultiSub][B74AD365]',
    'original_name': '[Erai-raws] Mairimashita Iruma-kun 4th Season - 17 [1080p CR WEB-DL AVC AAC][MultiSub][B74AD365]',
  })
# ---
# name: test_clean_torrent_name[anime_subsplease_episode]
  dict({
    'cleaned_name': '[SubsPlease] Saikyou Degarashi Ouji no Anyaku Teii Arasoi 02 [AABCF281] mkv',
    'original_name': '[SubsPlease] Saikyou Degarashi Ouji no Anyaku Teii Arasoi - 02 (1080p) [AABCF281].mkv',
  })
# ---
# name: test_clean_torrent_name[anime_subsplease_season_batch]
  dict({
    'cleaned_name': '[SubsPlease] Sousou no Frieren S2 (01-10) [Batch]',
    'original_name': '[SubsPlease] Sousou no Frieren S2 (01-10) (1080p) [Batch]',
  })
# ---
# name: test_clean_torrent_name[anime_subsplease_season_marker_episode]
  dict({
    'cleaned_name': '[SubsPlease] Sousou no Frieren S2 10 [7D35515E] mkv',
    'original_name': '[SubsPlease] Sousou no Frieren S2 - 10 (1080p) [7D35515E].mkv',
  })
# ---
# name: test_clean_torrent_name[complete_series_sub_folder_season]
  dict({
    'cleaned_name': 'Duck Dodgers Complete Series TvRip DivX XviD KF',
    'original_name': 'Duck.Dodgers.Complete.Series.TvRip.DivX.XviD.Hun.Eng-KF',
  })
# ---
# name: test_clean_torrent_name[complete_series_without_season]
  dict({
    'cleaned_name': 'Muneca Brava Complete TVrip DTVRip',
    'original_name': 'Muneca.Brava.Complete.TVrip_DTVRip.Hun',
  })
# ---
# name: test_clean_torrent_name[movie_superman]
  dict({
    'cleaned_name': 'Superman 2025 TRiNiTY',
    'original_name': 'Superman.2025.1080p.BluRay.REMUX.TrueHD.Atmos.7.1.AVC.HuN-TRiNiTY',
  })
# ---
# name: test_clean_torrent_name[series_big_bang_theory]
  dict({
    'cleaned_name': 'The Big Bang Theory S01-S12 COMPLETE pcroland',
    'original_name': 'The.Big.Bang.Theory.S01-S12.COMPLETE.1080p.BluRay.DD5.1.x264.HUN.ENG-pcroland',
  })
# ---
# name: test_clean_torrent_name[series_different_file_attributes]
  dict({
    'cleaned_name': 'Malcolm in the Middle S01-S07 READ NFO NF pcroland',
    'original_name': 'Malcolm.in.the.Middle.S01-S07.READ.NFO.576p.NF.WEBRip.DD5.1.x264.HUN.ENG-pcroland',
  })
# ---
# name: test_clean_torrent_name[series_house_of_dragon]
  dict({
    'cleaned_name': 'House of the Dragon S03E03 AMZN PTHD',
    'original_name': 'House.of.the.Dragon.S03E03.1080p.AMZN.WEB-DL.DDP5.1.Atmos.H.264.HUN.ENG-PTHD',
  })
# ---
# name: test_clean_torrent_name[series_lost_concatenated]
  dict({
    'cleaned_name': 'Lost S01-S06 Kataklysm',
    'original_name': 'Lost.S01-S06.1080p.BluRay.REMUX.AVC.DTS-HD.MA.5.1.HUN.ENG-Kataklysm',
  })
# ---
# name: test_clean_torrent_name[series_miraculous]
  dict({
    'cleaned_name': 'Miraculous S01-S04',
    'original_name': 'Miraculous S01-S04 (WEB-DL_1280x720)',
  })
# ---
# name: test_clean_torrent_name[series_the_boys]
  dict({
    'cleaned_name': 'The Boys S05 AMZN PTHD',
    'original_name': 'The.Boys.S05.1080p.AMZN.WEB-DL.DDP5.1.Atmos.H.264.HUN.ENG-PTHD',
  })
# ---
# name: test_clean_torrent_name[series_with_space_separator]
  dict({
    'cleaned_name': 'Two and a Half Men S01-S12 AMZN',
    'original_name': 'Two and a Half Men S01-S12 AMZN.WEB-DL1080p',
  })
# ---
# name: test_clean_torrent_name[series_with_x_base]
  dict({
    'cleaned_name': 'The Boondocks S01-S03 [ GaRuRuMoN]',
    'original_name': 'The_Boondocks_-_S01-S03_[DVDRip-Hun-Eng-GaRuRuMoN]',
  })
# ---
